# fastapi-cqrs-mediator

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  makefile  mypy.ini  pyproject.toml
.github/workflows/: pipeline.yml
config/: config_prod.toml
migrations/: env.py
migrations/versions/: 20240219-213806_0041e972f943_.py  20240219-224148_72a0619a895d_.py  20240219-224326_e3b35b232a57_.py  20240310-011234_6a84700556ea_.py  d9fb4ca12918_.py
nginx/: nginx.conf
nginx/configs/: site.conf
src/api/: __init__.py  root.py
src/app/: __main__.py
src/app/api/: __init__.py  hotel.py  responses.py  root.py
src/app/api/endpoints/: healthcheck.py  hotel.py  root.py  user.py
src/app/api/endpoints/v1/: __init__.py  healthcheck.py  user.py
src/app/common/: __init__.py  converters.py  depends_stub.py  password.py
src/app/common/dto/: __init__.py  base.py  hotel.py  user.py
src/app/common/exceptions/: __init__.py  exceptions.py  responses.py  service.py
src/app/common/interfaces/: crud.py  handler.py  password.py  repository.py  uow.py
src/app/common/markers/: __init__.py  gateway.py
src/app/common/sdi/: __init__.py  meta.py
src/app/common/serializers/: orjson.py
src/app/core/: config.py  depends_stub.py
src/app/database/: __init__.py  exceptions.py
src/app/database/core/: connection.py  gateway.py  uow.py
src/app/database/models/: __init__.py  booking.py  hotel.py  room.py  user.py
src/app/database/models/base/: __init__.py  core.py
src/app/database/models/base/mixins/: __init__.py  with_id.py  with_time.py
src/app/database/repositories/: base.py  crud.py
src/app/database/repositories/user/: __init__.py  reader.py  repository.py  writer.py
src/app/handlers/: base.py
src/app/handlers/commands/: __init__.py  create_user.py  delete_user.py  mediator.py  setup.py  update_user.py
src/app/handlers/queries/: __init__.py  mediator.py  select_user.py  setup.py
src/app/handlers/user/: select_user.py
src/app/main/: __init__.py  di.py  exceptions.py  middlewares.py  routers.py  web.py
src/app/mediator/: base.py
src/app/mediator/commands/: __init__.py
src/app/mediator/queries/: __init__.py
src/app/schemas/: hotel.py
src/app/services/: __init__.py  gateway.py  service.py  user.py
src/app/settings/: config.py
src/main/: __init__.py  routers.py  web.py
tests/mocks/: __init__.py  gateway.py  uow.py  user_repository.py
tests/unit/: conftest.py
tests/unit/commands/: test_create_user.py
tests/unit/queries/: test_select_user.py
