[tool.poetry]
name = "booking"
version = "0.1.0"
description = ""
authors = ["Psychotim <balduev.desco@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.28.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.28" }
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
nest-asyncio = "^1.6.0"
orjson = "^3.9.15"
passlib = "^1.7.4"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
logging = "^0.4.9.6"
ruff = "^0.2.1"
mypy = "^1.8.0"

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.mypy]
strict = true
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
disable_error_code = ["union-attr", "var-annotated"]
exclude = "migrations"

[tool.ruff]
fix = true
unsafe-fixes = true
# line-length = 120 - if active, remove E501 from ignore
lint.select = ["ALL"]
lint.ignore = [
    "D1",
    "D203",
    "D213",
    "FA102",
    "ANN101",
    "UP007",
    "FA100",
    "COM812",
    "ISC001",
    "E501",
    "ANN401",
    "TRY003", # Exception error
    "EM101",  # Exception error
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core>=1.7"]
build-backend = "poetry.core.masonry.api"
