[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["Psychotim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.28" }
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
nest-asyncio = "^1.6.0"
orjson = "^3.9.15"
passlib = "^1.7.4"
gunicorn = "^21.2.0"
types-passlib = "^1.7.7.20240311"
httpx = "^0.27.0"
uuid6 = "^2024.1.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.1"
mypy = "^1.8.0"
black = "24.3.0"

[tool.ruff]
fix = true
unsafe-fixes = true
# line-length = 120 - if active, remove E501 from ignore
lint.select = ["ALL"]
lint.ignore = [
    "D1",
    "D203",
    "D213",
    "FA102",
    "ANN101",
    "UP007",
    "FA100",
    "COM812",
    "ISC001",
    "E501",
    "ANN401",
    "TRY003", # Exception error
    "EM101",  # Exception error
    "PGH003", # type ignore
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:warnings" # Disabling warning capture entirely

[build-system]
requires = ["poetry-core>=1.7"]
build-backend = "poetry.core.masonry.api"
